# linux-sys-manager

./: Cargo.toml  LICENSE  README.md  config.yml
src/: cli.rs  main.rs  os.rs  traits.rs  utils.rs
src/os/: mod.rs
src/os/arch/: constants.rs  mod.rs
