[package]
name = "lsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
git2 = "0.19.0"
os_info = "3.8.2"
quale = "1.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_yaml = "0.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.0"
